--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,14 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+  <groupId>org.camunda.spin</groupId>
+  <artifactId>camunda-spin-core</artifactId>
+  <!-- The version is omitted here, because it is managed via the BOM.
+    Declare a concrete version if you do not use the BOM -->
+</dependency>
+
+
     <!-- Add your own dependencies here, if in compile scope, they are added to the war -->
 
   </dependencies>
@@ -193,6 +201,14 @@
         <groupId>org.jboss.as.plugins</groupId>
         <artifactId>jboss-as-maven-plugin</artifactId>
         <version>7.9.Final</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>15</source>
+          <target>15</target>
+        </configuration>
       </plugin>
     </plugins>
   </build>
